# mrpoid2026

./: .gitignore  README.md
.github/workflows/: build-native.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mrpoid/mrplist/app/: MyApplication.java  WelcomeActivity.java
app/src/main/res/layout/: activity_welcome.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/java/com/mrpoid/: MrpoidMain.java
lib/src/main/java/com/mrpoid/app/: EmulatorActivity.java  EmulatorService.java  MrpoidSettingsActivity.java
lib/src/main/java/com/mrpoid/core/: EmuConfig.java  EmuScreen.java  Emulator.java  MrpoidSettings.java
lib/src/main/jni/: Android.mk  CMakeLists.txt
lib/src/main/jni/src/: CMakeLists.txt  dsm.c  dsm.h  emulator.c  mr_types.h  rbtree.c  rbtree.h  uc_bridge.c  uc_bridge.h  uc_fileLib.c  uc_fileLib.h  uc_memory.c  uc_memory.h  uc_vm.c  uc_vm.h  utils.c  utils.h
lib/src/main/jni/src/mr/: CMakeLists.txt  mrporting.h
lib/src/main/jni/src/mr/include/: mr.h  mr_stdint.h
lib/src/main/jni/src/mr/src/: mr_limits.h
lib/src/main/jni/src/mythroad/: mr_mem.c
lib/src/main/res/drawable/: ic_notify.xml
lib/src/main/res/menu/: emu_main.xml
lib/src/main/res/values/: emu_strings.xml
lib/src/main/res/xml/: emu_preferences.xml
